Fix alignment issues

--- a/frontend/src/frontpage/frontPageStyles.css
+++ b/frontend/src/frontpage/frontPageStyles.css
@@ -33,6 +33,8 @@
 .frontpage-button {
   width: 1000px;
   margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
   position: absolute;
   bottom: 10%;
 }
